# api/http/nmapapi/main.go
@@ -3,7 +3,7 @@ package nmapapi
 import (
 	"net/http"
 
-	"github.com/arielril/attack-graph-flow-code-runner/internal/command"
+	"github.com/arielril/attack-graph-flow-code-runner/internal/model"
 	"github.com/arielril/attack-graph-flow-code-runner/internal/nmap"
 	"github.com/arielril/attack-graph-flow-code-runner/log"
 	"github.com/gin-gonic/gin"
@@ -12,23 +12,33 @@ import (
 var logger = log.GetInstance()
 
 func ExecuteNmap(c *gin.Context) {
-	var request command.ApiExecuteNmap
+	var request *model.ApiExecuteNmap
 
 	err := c.BindJSON(&request)
 	if err == nil {
 		logger.Debug("parsed request")
 
-		target := request.Args.Target
+		nmapOpts := nmap.ApiExecuteToInternalStruct(*request)
 
-		logger.WithField("target", target).Info("parsed request")
+		logger.WithField("target", nmapOpts.Target).Info("parsed request")
 
-		if target != "" {
-			nmap.Run(target)
+		if nmapOpts.Target != "" {
+			nmap.Run(nmapOpts)
 
-			c.JSON(http.StatusOK, gin.H{
-				"target":  target,
-				"results": []string{"something here"},
-			})
+			resp := &model.ApiExecuteNmap200Response{
+				Target: nmapOpts.Target,
+				Ports: []*model.ApiExecuteNmap200PortsResponse{
+					{
+						Number:   80,
+						State:    "open",
+						Protocol: "TCP",
+						Service:  "http",
+						Version:  "Apache httpd 2.4.41 ((Ubuntu))",
+					},
+				},
+			}
+
+			c.JSON(http.StatusOK, resp)
 		}
 	} else {
 		logger.WithError(err).Warn("failed to parse request")
