# internal/command/type.go
@@ -1,7 +1,0 @@
-package command
-
-type ApiExecuteNmap struct {
-	Args struct {
-		Target string `json:"target"`
-	} `json:"args"`
-}
